--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -793,18 +793,20 @@
 
 .services-page-wrapper {
   position: relative;
+  display: flex;
+  justify-content: space-between;
 
-  @media (max-width: 1023px) {
-    padding-bottom: 156px;
-  }
+  // @media (max-width: 1023px) {
+  //   padding-bottom: 156px;
+  // }
 
-  @media (max-width: 768px) {
-    padding-bottom: 128px;
-  }
+  // @media (max-width: 768px) {
+  //   padding-bottom: 128px;
+  // }
 
-  @media (max-width: 480px) {
-    padding-bottom: 98px;
-  }
+  // @media (max-width: 480px) {
+  //   padding-bottom: 98px;
+  // }
 }
 .section-services {    
   padding-bottom: 48px;
@@ -836,23 +838,39 @@
   background: #FFF;
   box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   margin-bottom: 32px;
+  width: calc(50% - 16px);
+
+  &:nth-last-child(-n+2) {
+    padding-bottom: 20px;
+  }
 
   @media (max-width: 1366px) {
     padding: 15px 35px 35px 35px;
     margin-bottom: 20px;
-  } 
+    width: calc(50% - 10px);
+  }
+
+  @media (max-width: 1024px) {
+    width: calc(100%);    
+  }  
+
+  @media (max-width: 768px) {
+    &:nth-last-child(-n+2) {
+      padding-bottom: 0;
+    }
+  }  
 
   @media (max-width: 480px) {
     padding: 0px 12px 20px 12px;
   }
 
-  &:last-child {
-    padding-bottom: 20px;
+  // &:last-child {
+  //   padding-bottom: 20px;
 
-    @media (max-width: 768px) {
-      padding-bottom: 0;
-    }
-  }
+  //   @media (max-width: 768px) {
+  //     padding-bottom: 0;
+  //   }
+  // }
 
   &-head {
     padding: 20px;
