--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -7304,9 +7304,27 @@
       display: block;
     }
   }
+  .rating {
+    &-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #fff;
+      @include fz(18);     
+      line-height: 1.55;
+      @include ls(0.36);
+      margin-bottom: 12px;
+
+      @media (max-width: 599px) {
+        @include fz(14);       
+        line-height: 1.42;
+        @include ls(0.14);      
+      }
+    }
+  }
   .agree {
     &-wrapper {
-      height: 100%;
+      // height: 100%;
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
@@ -7322,23 +7340,23 @@
     }
     span {
       color: #FFF;
-      @include fz(11);   
+      @include fz(9);   
       font-weight: 400;
       line-height: 145.455%;
       @include ls(0.11);
 
       @media (max-width: 1280px) {
-        @include fz(10);
+        @include fz(8);
         @include ls(0.1);
       }
 
       @media (max-width: 1140px) {
-        @include fz(9);
+        // @include fz(9);
         @include ls(0.09);      
       }
 
       @media (max-width: 599px) {
-        @include fz(8);
+        // @include fz(8);
         @include ls(0.08);       
         line-height: 162.5%;       
       }
