--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -8891,3 +8891,110 @@
     }
   }  
 }
+
+.search {
+  &-hint {
+    @include fz(20); 
+    font-weight: 500;
+    line-height: 1.4;
+    text-align: center;
+    margin-bottom: 60px;
+
+    @media (max-width: 1366px) {
+      @include fz(18);
+      margin-bottom: 50px;   
+    }
+
+    @media (max-width: 960px) {
+      @include fz(16);    
+      line-height: 1.28;
+      margin-bottom: 40px;
+    }
+
+    @media (max-width: 599px) {
+      @include fz(14);
+      margin-bottom: 32px;      
+    }
+
+    span {
+      font-weight: 600;
+    }
+  }
+
+  &-list {
+    &-card {
+      padding: 40px;
+      background-color: #fff;
+      border-radius: 12px;  
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+      margin-bottom: 60px;
+      font-weight: 600;
+      @include fz(24);      
+      line-height: 1.33;
+
+      @media (max-width: 960px) {
+        padding: 30px;
+        margin-bottom: 50px;
+      }
+
+      @media (max-width: 768px) {
+        padding: 20px;
+        border-radius: 6px;
+        box-shadow: 0px 2px 9px 0px rgba(43, 47, 137, 0.15);
+        margin-bottom: 40px;
+      }
+
+      @media (max-width: 599px) {
+        padding: 20px 12px;
+        @include fz(16);
+        line-height: 1.25;
+        margin-bottom: 32px;
+      }
+
+      li {
+        padding: 20px 32px;
+        border-bottom: 1px solid $bgc;
+        cursor: pointer;        
+        transition: background-color 0.3s, border-radius 0.3s;
+        margin-bottom: 0 !important;
+
+        @media (max-width: 768px) {
+          padding: 20px 0px;
+        }
+
+        @media (max-width: 599px) {
+          padding: 12px 0px;
+
+          &:last-child {
+            border-bottom: none;
+          }
+        }
+
+        @media (hover: hover) and (pointer: fine) {
+          &:hover {
+            background-color: $primary;
+            border-radius: 12px;
+            a {
+              color: #fff;
+            }          
+          }
+        }        
+      }
+
+      .ui-list {
+        @media (max-width: 599px) {
+          margin-bottom: 0;
+        }
+        li {
+          &::before {
+            margin-top: 8px;
+  
+            @media (max-width: 599px) {
+              margin-top: 2px;
+            }
+          }
+        }
+      }
+    }    
+  }  
+}
