--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -7320,6 +7320,10 @@
         line-height: 1.42;
         @include ls(0.14);      
       }
+
+      span {
+        margin-left: 30px;
+      }
     }
   }
   .agree {
@@ -7329,11 +7333,19 @@
       justify-content: space-between;
       align-items: flex-end;
       gap: 17px;
+
+      @media (max-width: 599px) {
+        gap: 6px;
+      }
     }
     width: 45%;
     max-width: 260px;
     display: flex;
     gap: 12px;
+
+    @media (max-width: 599px) {
+      width: 58%;
+    }
 
     .jq-checkbox {
       flex-shrink: 0;
