--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,4 +1,8 @@
 .wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  
   @media (max-width: 599px) {
     overflow: hidden;
   }
@@ -9170,4 +9174,21 @@
       }
     }    
   }  
+}
+
+.section-error {
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+
+  @media (max-width: 599px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  &-title {
+    margin-bottom: 20px;
+
+    
+  }
 }
