--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -5123,6 +5123,139 @@
         width: 100%;
       }
     }
+
+    &-file {
+      color: $primary;
+      @include fz(18);     
+      font-weight: 600;     
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      padding: 8px 20px 8px 8px;
+      border-radius: 30px;
+      height: 62px;
+
+      @media (max-width: 1280px) {		
+        @include fz(16);
+        height: 52px;
+        padding: 6px 18px 6px 6px;
+      }
+  
+      @media (max-width: 599px) {     
+        @include fz(14);
+        @include ls(0.14);
+        height: 44px;
+        padding: 4px 16px 4px 4px;   
+      }
+
+      img {
+        &.feedback-form-file-image {
+          width: 72px;
+          height: 46px;
+          flex-shrink: 0;
+          border-radius: 26px;
+          margin-right: 12px;
+
+          @media (max-width: 1280px) {		
+            width: 68px;
+            height: 42px;
+          }
+
+          @media (max-width: 599px) {		
+            width: 64px;
+            height: 36px;
+          }
+        }
+      }      
+
+      &-text {
+        margin-right: auto;
+      }
+
+      &-icon {
+        width: 16px;
+        height: 16px;
+
+        @media (max-width: 1280px) {
+          width: 14px;
+          height: 14px;
+        }
+
+        @media (max-width: 599px) {
+          width: 12px;
+          height: 12px;
+        }
+      }
+    }
+
+    &-agree {
+      color: #FFF;
+      @include fz(12);
+      font-size: 12px;
+      @include ls(0.12);
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    &__appointment {
+      column-gap: 56px;
+      align-items: flex-start;
+
+      .feedback-title {
+        padding-right: 0;
+        margin-right: 0;
+      }
+
+      .feedback-fields {
+        flex-grow: 1;
+        column-gap: 32px;
+        row-gap: 20px;
+        justify-content: flex-start;
+      }
+
+      .ui-field {
+        width: 24.7%;
+
+        @media (max-width: 1140px) {
+          width: 40%;
+        }
+
+        @media (max-width: 1024px) {
+          width: calc(50% - 16px);
+        }
+
+        @media (max-width: 599px) {
+          width: 100%;
+        }
+      }
+
+      .feedback-form {
+
+        &-file {
+          font-weight: 400;
+
+          img {
+            &.feedback-form-file-image {
+              width: 56px;
+              height: 46px;
+              object-fit: cover;
+              object-position: center;
+
+              @media (max-width: 1280px) {
+                width: 68px;
+                height: 42px;
+              }
+
+              @media (max-width: 599px) {
+                width: 64px;
+                height: 36px;
+              }
+            }
+          }         
+        }
+      }
+    }
   }
 
   &-fields {
@@ -5704,7 +5837,8 @@
     width: 100%;
 
     &__foreign {
-      height: 490px;
+      // height: 490px;
+      height: 100%;
     }
 
     @media (max-width: 1366px) {
@@ -6574,6 +6708,47 @@
     max-width: 560px;
   }
 
+  &.popup-appointment {
+    .feedback-form-textarea {
+      width: 100%;
+
+      .ui-texarea {
+        height: 145px;
+      }      
+    }
+
+    .feedback-form-send {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      gap: 12px;
+      label {
+        display: flex;
+        gap: 12px;
+
+        @media (max-width: 599px) {
+          max-width: 48%;
+        }
+      }      
+    }
+
+    .feedback-form-agree {
+      max-width: 210px;
+      color: #FFF;
+      @include fz(12);
+      @include ls(0.12);       
+      font-weight: 400;
+      line-height: 175%;
+      
+      @media (max-width: 599px) {
+        @include fz(8);
+        @include ls( 0.08);
+        line-height: 162.5%;
+        max-width: unset;     
+      }
+    }
+  }
+
   &.popup-video-reviews {
     max-width: 80vw;   
     max-height: 80vh;
@@ -6629,6 +6804,7 @@
         text-transform: uppercase;
         margin-bottom: 48px;
         margin-top: 0;
+        align-self: flex-start;
 
         @media (max-width: 768px) {
          margin-bottom: 35px;        
@@ -6644,10 +6820,10 @@
 
       .ui-field {
         width: 100%;
-        margin-bottom: 40px;
+        margin-bottom: 28px;
 
         @media (max-width: 599px) {
-          margin-bottom: 20px;
+          margin-bottom: 16px;
         }
       }
 
