--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3409,6 +3409,17 @@
   }
 }
 
+article {
+  a {
+    color: $primary;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $bgc-pink;
+    }
+  }
+}
+
 .article {
   display: flex;
   border-radius: 12px;
@@ -7981,7 +7992,7 @@
       @media (max-width: 1680px) {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        // justify-content: center;
         // row-gap: 30px;
         column-gap: 30px;
       }
@@ -8051,12 +8062,29 @@
     margin-bottom: 40px;
 
     &.feedback-form-field {
+      // @media (max-width: 1366px) {
+      //   width: 37%;
+      // }
+
+      // @media (max-width: 960px) {
+      //   width: calc(50% - 15px);
+      // }
+
+      // @media (max-width: 599px) {
+      //   width: 100%;
+      // }
+
       @media (max-width: 1366px) {
-        width: 37%;
+        width: calc(33.33% - 20px);
       }
 
-      @media (max-width: 960px) {
-        width: calc(50% - 15px);
+      @media (max-width: 1140px) {
+        width: 40%;
+        width: calc(50% - 16px);
+      }
+
+      @media (max-width: 1024px) {
+        width: calc(50% - 16px);
       }
 
       @media (max-width: 599px) {
