--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -12,35 +12,42 @@ ul, ol {
 }
 
 .ui-list {
-	margin-bottom: 20px;
+	margin-bottom: 20px;	
 	li {
-		display: flex;
-		gap: 15px;
+		position: relative;
+		// display: flex;
+		// gap: 15px;
 		margin-bottom: 14px;
 		line-height: 155.556%;		
 		@include ls(0.36);
+		padding-left: 38px;
 
 		@media (max-width: 599px) {			
 			line-height: 142.857%;
 			@include ls(0.14);			
 		}
 		&::before {
+			position: absolute;
+			left: 4px;
+			top: 4px;
 			content: '';
 			background-color: $primary;
-			display: inline-block;             
+			display: inline-block;			     
 			width: 20px;
 			height: 20px;
 			border-radius: 50%;
 			flex-shrink: 0;
-			margin-top: 4px;
-			margin-left: 4px;			
+			// margin-top: 4px;
+			// margin-left: 4px;			
 			background-repeat: no-repeat no-repeat;
 			background-position: center center;
-			background-size: 10px 10px;
+			background-size: 10px 10px;		
 
 			@media (max-width: 599px) {
 				margin-top: 0;
 				margin-left: 2px;
+				left: 2px;
+				top: 0px;
 			}
 		}
 		&:not(:last-child) {
@@ -50,10 +57,22 @@ ul, ol {
 				margin-bottom: 10px;
 			}
 		}
+
+		ul {
+			// width: 100%;
+			padding-top: 12px;
+
+			li {
+				padding-left: 34px;
+				&::before {
+					left: 0;
+				}
+			}
+		}
 	}
 
 	&-plus {
-		li {
+		& > li {
 			&::before {
 				background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10' fill='none'%3E%3Cpath d='M5 1V9' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M1 5H9' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
 			}
@@ -61,7 +80,7 @@ ul, ol {
 	}
 
 	&-check {
-		li {
+		& > li {
 			&::before {
 				background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='11' height='9' viewBox='0 0 11 9' fill='none'%3E%3Cpath d='M1 4.5L4 7.5L10 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");                
 				background-size: 11px 9px;
@@ -70,7 +89,7 @@ ul, ol {
 	}
 
 	&-cross {
-		li {
+		& > li {
 			&::before {
 				background-color: $bgc-pink;
 				background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8' fill='none'%3E%3Cpath d='M1 1L7 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7 1L1 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
@@ -803,13 +822,18 @@ b, strong {
 	background-color: $bgc;
 	border: 3px solid $bgc;
 	cursor: pointer;
-	flex-shrink: 0;
+	flex-shrink: 0;	
 
-	// &:has(.error ) {		
-	// 	& ~ .feedback-form-agree {
+	&:has(.error ) {
+		border-color: #a30000;
+		// & ~ .feedback-form-agree {
 			
-	// 	}
-	// }
+		// }
+	}
+
+	&.checked {
+		border-color: $bgc;
+	}
 }
 
 .jq-checkbox.checked {
